# chefsire1

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  vite.config.ts
client/src/: app.tsx
client/src/components/: Layout.tsx  MobileNav.tsx
client/src/lib/: api.ts
client/src/pages/: RecipeDetail.tsx  RecipesBrowse.tsx  Substitutions.tsx  home.tsx
docs/: getting-started.md
examples/: sample_recipes.py
mobile/: README.md  package.json
server/: app.ts  index.ts  package.json  recipes-service.ts  routes.ts  storage.ts
server/routes/: index.ts  recipes.ts  substitutions.ts
server/src/: index.ts  storage.ts
shared/: package.json  schema.ts
shared/src/: index.ts  schema.ts  utils.ts
src/chefsire1/: __init__.py  cli.py  models.py  recipe_manager.py
tests/: __init__.py  test_models.py
web/: .gitignore  package.json  tsconfig.json  vite.config.ts
web/public/: index.html
web/src/: App.tsx  index.js
web/src/components/: NavBar.tsx  RecipeCard.tsx
web/src/pages/: Home.tsx  Profile.tsx  RecipeDetail.tsx  Recipes.tsx
web/src/styles/: index.css
